# apt-local

./: .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
apt_local/: __init__.py  pacman.py  system.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/apt_local/: __init__.py  pacman.py  system.py
tests/: __init__.py  test_apt_local.py
