

[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis@protonmail.com
name = apt_local
keywords = apt_local
description=
    Simple symlink-based package manager for local installations (without sudo)

long_description = file: README.md, HISTORY.md
long_description_content_type = markdown
license = GNU General Public License v3
license_file = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Intended Audience :: End Users/Desktop
        Intended Audience :: System Administrators
        Intended Audience :: Science/Research
        Topic :: System :: Systems Administration
        Topic :: System :: Installation/Setup
        Topic :: Utilities
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Natural Language :: English
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
url = https://github.com/ashwinvis/apt_local
include_package_data = True
zip_safe = False

[options]
python_requires = >= 3.6
package_dir=
    =src
packages=find:
setup_requires =
    setuptools>=39.2.0
    setuptools_scm

test_requires =

install_requires =

[options.packages.find]
where=src

[options.extras_require]
docs =
    sphinx==2.0.1
    recommonmark>=0.5.0
    sphinx_rtd_theme==0.4.3
    numpydoc

dev =
    %(docs)s
    bumpversion==0.5.3
    watchdog==0.9.0
    flake8==3.5.0
    tox==3.5.2
    coverage==4.5.1
    twine==1.12.1

[options.entry_points]
console_scripts =
    apt-local = apt_local.__init__:main

[bumpversion]
current_version = 0.0.2b0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/apt_local/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here

